Cleaned up the code, after testing all the endpoints and more test for jsonParserTest class